# elastic-eck-demo

./: .editorconfig  .gitignore  .yamllint  CLAUDE.md  Makefile  Pipfile  README.md  pyproject.toml
config/eck-operator/: values.yml
config/eck-stack/: values.a.yml  values.b.yml  values.monitoring.yml  values.prd.yml
config/ingress-nginx/: values.yml
scripts/: deploy.py  destroy.py  test.py
scripts/helpers/: download_kubeconfig.py  get_ingress_external_ip.py
src/helm/: Chart.yaml
src/helm/templates/: dev.yml  filerealm-users.yml  ingest-svc.yml  keystore.yml  licence.yml  monitoring.yml  prd.yml  remote-certs.yml  service-account.yml  workload-identity.yml
src/terraform/: .terraform.lock.hcl  data.tf  identity.tf  k8s.tf  locals.tf  main.tf  outputs.tf  storage.tf  variables.tf  virtual_network.tf
